# hermod

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.debug  LICENSE  README.ko.md  README.md  clippy.toml  deny.toml  docker-compose.broker.yml  docker-compose.yml  rust-toolchain.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: audit-emission.md  clean-slate.md  lints-and-tests.md  naming-taxonomy.md
.github/workflows/: ci.yml  lint.yml
commands/: agents.md  health.md  inbox.md  peers.md
crates/hermod-cli/: CLAUDE.md  Cargo.toml
crates/hermod-cli/src/: client.rs  error.rs  main.rs  pins.rs  remote.rs
crates/hermod-cli/src/bearer/: command.rs  file.rs  mod.rs  static_provider.rs
crates/hermod-cli/src/commands/: agent.rs  audit.rs  bearer.rs  brief.rs  broadcast.rs  capability.rs  channel.rs  confirmation.rs  doctor.rs  identity.rs  inbox.rs  init.rs  local.rs  message.rs  mod.rs  notification.rs  peer.rs  permission.rs  presence.rs  status.rs  workspace.rs
crates/hermod-cli/src/mcp/: channel.rs  initialize.rs  mod.rs  notification.rs  notifier.rs  permission.rs  session.rs  tools.rs
crates/hermod-cli/tests/: bearer_refresh.rs  channels.rs  federation.rs  ipc_listen_ws_smoke.rs  multi_tenant.rs  proxy_bearer.rs
crates/hermod-core/: CLAUDE.md  Cargo.toml
crates/hermod-core/src/: bytes.rs  capability.rs  capability_tag.rs  envelope.rs  error.rs  git_workspace.rs  identity.rs  lib.rs  mcp_session.rs  time.rs  workspace.rs
crates/hermod-crypto/: CLAUDE.md  Cargo.toml
crates/hermod-crypto/src/: canonical.rs  capability.rs  error.rs  identity.rs  keypair.rs  lib.rs  noise_key.rs  public_key.rs  secret.rs  short_id.rs  signer.rs  tls.rs  workspace.rs
crates/hermod-daemon/: CLAUDE.md  Cargo.toml
crates/hermod-daemon/src/: audit_context.rs  client_ip.rs  config.rs  dispatcher.rs  federation.rs  fs_atomic.rs  home_layout.rs  host_identity.rs  identity.rs  ipc_remote.rs  janitor.rs  lib.rs  local_agent.rs  main.rs  observability.rs  outbox.rs  paths.rs  server.rs  services.rs
crates/hermod-daemon/src/bootstrap/: audit_sink.rs  mod.rs
crates/hermod-daemon/src/identity/: layout.rs  mod.rs
crates/hermod-daemon/src/inbound/: capability_audit.rs  channel.rs  file_brief_presence.rs  mod.rs  peer_advertise.rs  permission.rs  scope.rs  workspace_observability.rs
crates/hermod-daemon/src/services/: agent.rs  audit.rs  audit_remote.rs  beacon_audit.rs  brief.rs  broadcast.rs  broker.rs  capability.rs  channel.rs  confirmation.rs  fanout.rs  inbox.rs  local_agent.rs  mcp.rs  message.rs  notification.rs  peer.rs  permission.rs  permission_relay.rs  presence.rs  status.rs  workspace.rs  workspace_observability.rs
crates/hermod-discovery/: CLAUDE.md  Cargo.toml
crates/hermod-discovery/src/: lib.rs  mdns.rs
crates/hermod-protocol/: CLAUDE.md  Cargo.toml
crates/hermod-protocol/src/: envelope.rs  handshake.rs  lib.rs  wire.rs
crates/hermod-protocol/src/ipc/: client.rs  codec.rs  error.rs  message.rs  methods.rs  mod.rs  server.rs
crates/hermod-protocol/tests/: ipc_roundtrip.rs
crates/hermod-routing/: CLAUDE.md  Cargo.toml
crates/hermod-routing/src/: access.rs  auto_approve.rs  confirmation.rs  dispatch.rs  error.rs  lib.rs  peer.rs  pool.rs  rate_limit.rs  remote.rs  router.rs  transport.rs  wss_noise.rs
crates/hermod-routing/tests/: docs_coverage.rs
crates/hermod-storage/: CLAUDE.md  Cargo.toml
crates/hermod-storage/migrations/: 20260425000001_initial.sql
crates/hermod-storage/migrations-postgres/: 20260425000001_initial.sql
crates/hermod-storage/src/: audit_archive.rs  audit_sink.rs  database.rs  error.rs  file_audit_sink.rs  lib.rs  local_file.rs  webhook_audit_sink.rs
crates/hermod-storage/src/backends/: mod.rs
crates/hermod-storage/src/backends/postgres/: agents.rs  audit.rs  briefs.rs  capabilities.rs  confirmations.rs  database.rs  hosts.rs  local_agents.rs  messages.rs  mod.rs  notifications.rs  pool.rs  presence.rs  rate_limit.rs  workspaces.rs
crates/hermod-storage/src/backends/sqlite/: agents.rs  audit.rs  briefs.rs  capabilities.rs  confirmations.rs  database.rs  hosts.rs  local_agents.rs  messages.rs  mod.rs  notifications.rs  pool.rs  presence.rs  rate_limit.rs  workspaces.rs
crates/hermod-storage/src/blobs/: gcs.rs  local_fs.rs  memory.rs  mod.rs  object_store_adapter.rs  s3.rs
crates/hermod-storage/src/repositories/: agents.rs  audit.rs  briefs.rs  capabilities.rs  confirmations.rs  hosts.rs  local_agents.rs  messages.rs  mod.rs  notifications.rs  presence.rs  rate_limit.rs  workspaces.rs
crates/hermod-storage/tests/: blob_conformance.rs  postgres_agents.rs  postgres_audit.rs  postgres_caps_confirms.rs  postgres_messages.rs  postgres_repos.rs  postgres_workspaces.rs  proptest_messages.rs  roundtrip.rs
crates/hermod-transport/: CLAUDE.md  Cargo.toml
crates/hermod-transport/src/: error.rs  lib.rs  pin.rs  tls.rs  unix.rs  ws.rs
deploy/: README.md  launchd.org.hermod.daemon.plist
deploy/systemd/: hermod.service
docs/: audit_actions.md  confirmation.md  threat-model.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: capability_claim_cbor.rs  envelope_cbor.rs  wire_decode.rs
scripts/: broker-compose-up.sh  check_naming.sh  check_trust_boundaries.sh  install.sh  uninstall.sh
skills/hermod/: SKILL.md
