[workspace]
resolver = "3"
members = [
    "crates/hermod-core",
    "crates/hermod-crypto",
    "crates/hermod-storage",
    "crates/hermod-transport",
    "crates/hermod-protocol",
    "crates/hermod-routing",
    "crates/hermod-discovery",
    "crates/hermod-daemon",
    "crates/hermod-cli",
]
# `fuzz/` is a standalone crate driven by `cargo fuzz`. Excluded from
# `cargo build`/`cargo test --workspace` so the libFuzzer linker
# requirement (and nightly-only sanitizers) only fires when an
# operator actually runs a fuzz campaign.
exclude = ["fuzz"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
license      = "Apache-2.0"
rust-version = "1.94"
repository   = "https://github.com/junyeong-ai/hermod"
authors      = ["junyeong-ai <ai.junyeong@gmail.com>"]

# Workspace-level lint policy. Each crate inherits via
# `[lints] workspace = true` in its own Cargo.toml — additions here
# propagate to every crate in one place rather than per-file `#![deny]`
# attributes that drift over time.
#
# Rule of thumb: only lints that are clean against the *current* code
# go here. Adding a noisy lint without first cleaning the warnings is
# tech debt; clean first, then enable. CI's
# `cargo clippy -- -D warnings` step turns every `warn` here into a
# build break, so this list is the strictness floor.
[workspace.lints.rust]
unsafe_code                   = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# `clippy::all` is the well-curated baseline. Pedantic lints that
# produced unactionable noise (e.g. `unreachable_pub` against
# legitimately-`pub`-from-private-mod helpers, `trivial_casts` on
# `Arc<Concrete> as Arc<dyn Trait>` coercions) are not enabled here
# precisely because they are not best practice when they produce
# false positives at scale.
all       = { level = "deny",  priority = -1 }
todo      = "warn"
dbg_macro = "warn"

[workspace.dependencies]
# Internal crates
hermod-core        = { path = "crates/hermod-core" }
hermod-crypto      = { path = "crates/hermod-crypto" }
hermod-storage     = { path = "crates/hermod-storage" }
hermod-transport   = { path = "crates/hermod-transport" }
hermod-protocol    = { path = "crates/hermod-protocol" }
hermod-routing     = { path = "crates/hermod-routing" }
hermod-discovery   = { path = "crates/hermod-discovery" }

# Async runtime
tokio       = { version = "1.52", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec", "io"] }
futures     = "0.3"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium   = "0.2"

# Crypto
ed25519-dalek = { version = "2.2", features = ["rand_core", "pkcs8", "zeroize"] }
blake3        = "1.8"
rand          = "0.8"
rand_core     = "0.6"

# Identity / time
ulid          = { version = "1.2", features = ["serde"] }
time          = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
data-encoding = "2.11"
strum         = { version = "0.27", features = ["derive"] }

# Storage. Driver features are added per-crate (hermod-storage enables
# `sqlite` always, `postgres` behind its `postgres` feature) so a build
# that doesn't need a particular driver doesn't pull it.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "migrate", "json"] }

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Errors
thiserror = "2.0"
anyhow    = "1.0"

# Config
toml        = "1.1"
directories = "6.0"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

async-trait = "0.1"
flate2      = "1"

# Federation transport: WebSocket + Noise XX inside TLS.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake", "connect", "__rustls-tls"] }
snow              = "0.10"
x25519-dalek      = { version = "2.0", features = ["static_secrets"] }
mdns-sd           = "0.13"

# TLS — defence-in-depth on top of Noise XX.
rustls           = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls     = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
rcgen            = { version = "0.14", default-features = false, features = ["pem", "ring"] }
sha2             = "0.10"
x509-parser      = "0.18"

# HTTP client (audit webhook sink). Rustls-only — same TLS stack as the
# rest of the daemon, no native-tls / openssl pull-in. `gzip`/`brotli`
# disabled: audit rows are tiny and most webhook endpoints accept
# uncompressed JSON; saves ~1.2 MiB of dependency weight.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "http2"] }

# Utility
hex          = "0.4"
serde_bytes  = "0.11"
zeroize      = { version = "1.8", features = ["zeroize_derive"] }
url          = "2.5"
tempfile     = "3.10"
libc         = "0.2"

# Cloud blob backends. Single SDK adapter for GCS/S3/Azure under one
# trait, gated on `hermod-storage`'s `gcs` / `s3` features. Off by
# default — the daemon's reference build (sqlite + local_fs) doesn't
# pay this dep tree.
object_store = { version = "0.13", default-features = false }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"
