[package]
name         = "hermod-cli"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Hermod operator CLI (`hermod`) — includes the MCP server that bridges Hermod inbox events into Claude Code via channels."

[[bin]]
name = "hermod"
path = "src/main.rs"

[dependencies]
hermod-core      = { workspace = true }
hermod-crypto    = { workspace = true }
hermod-protocol  = { workspace = true }
hermod-transport = { workspace = true }
hermod-daemon    = { path = "../hermod-daemon" }

blake3             = { workspace = true }
serde              = { workspace = true }
serde_bytes        = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
async-trait        = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
toml               = { workspace = true }
clap               = { workspace = true }
hex                = { workspace = true }
futures            = { workspace = true }
tokio-tungstenite  = { workspace = true }
rustls             = { workspace = true }
rustls-pki-types   = { workspace = true }
url                = { workspace = true }
sha2               = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }

[lints]
workspace = true
