[package]
name         = "hermod-core"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Core types for Hermod — identity, envelope, capability, errors."

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
serde_bytes   = { workspace = true }
thiserror     = { workspace = true }
time          = { workspace = true }
ulid          = { workspace = true }
hex           = { workspace = true }
strum         = { workspace = true }
blake3        = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
