[package]
name         = "hermod-daemon"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Hermod daemon — the hermodd binary."

[lib]
name = "hermod_daemon"
path = "src/lib.rs"

[[bin]]
name = "hermodd"
path = "src/main.rs"

[features]
default  = []
# Pass-through features that flip on storage backends. Operators
# select these on the daemon binary build (`cargo build -p
# hermod-daemon --features postgres,gcs --bin hermodd`); cargo's
# unified feature resolver applies them to `hermod-storage`.
postgres = ["hermod-storage/postgres"]
gcs      = ["hermod-storage/gcs"]
s3       = ["hermod-storage/s3"]

[dependencies]
hermod-core        = { workspace = true }
hermod-crypto      = { workspace = true }
hermod-storage     = { workspace = true }
hermod-transport   = { workspace = true }
hermod-protocol    = { workspace = true }
hermod-routing     = { workspace = true }
hermod-discovery   = { workspace = true }

serde              = { workspace = true }
serde_bytes        = { workspace = true }
serde_json         = { workspace = true }
blake3             = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tokio              = { workspace = true }
async-trait        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
toml               = { workspace = true }
directories        = { workspace = true }
clap               = { workspace = true }
ulid               = { workspace = true }
hex                = { workspace = true }
rand               = { workspace = true }
tokio-tungstenite  = { workspace = true }
tokio-rustls       = { workspace = true }
rustls             = { workspace = true }
rustls-pki-types   = { workspace = true }
strum              = { workspace = true }
futures            = { workspace = true }
zeroize            = { workspace = true }
libc               = { workspace = true }
ipnet              = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
