[package]
name         = "hermod-discovery"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Peer discovery for Hermod — static config + mDNS (P2.1)."

[dependencies]
hermod-core   = { workspace = true }
hermod-crypto = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }
hex           = { workspace = true }
mdns-sd       = { workspace = true }
tokio         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
